--- a/views/pages/racuni-svi.ejs
+++ b/views/pages/racuni-svi.ejs
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<% include ../partials/head %>
+
+	<% include ../partials/head-kendo %>
+	<% include ../partials/head-common %>
+
 	<title>Računi - Svi računi</title>
+
 </head>
 <body>
 
@@ -11,14 +15,15 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<h4>RAČUNI</h4>
+			<h4>Pregled svih računa</h4>
 		</div>
 	</div>
 </div>
 
 <% include ../partials/footer %>
 
-<% include ../partials/body %>
+<% include ../partials/body-common %>
+<% include ../partials/body-kendo %>
 
 </body>
 </html>
