--- a/views/partials/body-common.ejs
+++ b/views/partials/body-common.ejs
@@ -1,7 +1,6 @@
-<!-- views/partials/body.ejs -->
-
-<% include confirmation-modal %>
-
+<!-- views/partials/body-common.ejs -->
 <script src="js/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="js/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
+
+<% include confirmation-modal %>
