--- a/views/partials/confirmation-modal.ejs
+++ b/views/partials/confirmation-modal.ejs
@@ -1,3 +1,4 @@
+<!-- Confirm delete modal -->
 <div class="modal fade" id="confirmDeleteModal">
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
