--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<% include ../partials/head %>
+
+	<% include ../partials/head-kendo %>
+	<% include ../partials/head-common %>
+
 	<title>Računi</title>
+
 </head>
 <body>
 
-<header>
-	<% include ../partials/header %>
-</header>
+<% include ../partials/header %>
 
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-12">
 
+		</div>
+	</div>
+</div>
 
-<footer>
-	<% include ../partials/footer %>
-</footer>
+<% include ../partials/footer %>
 
-<script src="js/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<% include ../partials/body-common %>
+<% include ../partials/body-kendo %>
 
 </body>
 </html>
