--- a/views/partials/head-common.ejs
+++ b/views/partials/head-common.ejs
@@ -1,5 +1,4 @@
-<!-- views/partials/head.ejs -->
-
+<!-- views/partials/head-common.ejs -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="js/bower_components/bootstrap/dist/css/bootstrap.min.css">
