--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,4 @@
 <!-- views/partials/header.ejs -->
-
 <header>
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container-fluid">
@@ -17,8 +16,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="<%= typeof neplaceniRacuniTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/neplaceni-racuni"><strong>Računi za plaćanje</strong></a></li>
-					<li class="<%= typeof sviRacuniTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/svi-racuni"><strong>Svi računi</strong></a></li>
+					<li class="<%= typeof neplaceniRacuniTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/racuni-neplaceni"><strong>Računi za plaćanje</strong></a></li>
+					<li class="<%= typeof sviRacuniTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/racuni-svi"><strong>Svi računi</strong></a></li>
 					<li class="<%= typeof izvestajiTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/izvestaji"><strong>Izveštaji</strong></a></li>
 					<li class="<%= typeof partneriTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/partneri"><strong>Partneri</strong></a></li>
 				</ul>
