All files, tables, variables switched to english

--- a/views/pages/invoice-new.ejs
+++ b/views/pages/invoice-new.ejs
@@ -3,9 +3,10 @@
 <head>
 
 	<% include ../partials/head-kendo %>
+	<% include ../partials/head-parsley %>
 	<% include ../partials/head-common %>
 
-	<title>Računi - Neplaćeni</title>
+	<title>Računi - Novo zaduženje</title>
 
 </head>
 <body>
@@ -15,12 +16,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<h4>Pregled svih neplaćenih računa</h4>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-xs-12 col-sm-10 col-md-12">
-			<div id="neplaceniRacuniGrid"></div>
+			<h4>Unos novog zaduženja</h4>
 		</div>
 	</div>
 </div>
@@ -29,7 +25,8 @@
 
 <% include ../partials/body-common %>
 <% include ../partials/body-kendo %>
-<script src="js/racuni-neplaceni.js"></script>
+<% include ../partials/body-parsley %>
+<script src="js/zaduzenje-novo.js"></script>
 
 </body>
 </html>
