--- a/views/pages/partners.ejs
+++ b/views/pages/partners.ejs
@@ -16,12 +16,16 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<h4>Pregled svih partnera</h4>
-			<p class="text-gray">Kliknite na &nbsp; <span class='glyphicon glyphicon-pencil'></span> &nbsp; u tabeli, da biste podesili podrazumevane vrednosti za svakog od partnera.</p>
+			<p class="text-gray">
+				Kliknite na
+				&nbsp;<span class='glyphicon glyphicon-pencil'></span>&nbsp;
+				ispred naziva partnera da biste ga izmenili ili izbrisali.
+			</p>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<div id="partneriGrid"></div>
+			<div id="partnersGrid"></div>
 		</div>
 	</div>
 </div>
@@ -30,7 +34,7 @@
 
 <% include ../partials/body-common %>
 <% include ../partials/body-kendo %>
-<script src="js/partneri.js"></script>
+<script src="js/partners.js"></script>
 
 </body>
 </html>
