--- a/views/pages/invoices-all.ejs
+++ b/views/pages/invoices-all.ejs
@@ -16,6 +16,16 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
 			<h4>Pregled svih računa</h4>
+			<p class="text-gray">
+				Kliknite na
+				&nbsp;<span class='glyphicon glyphicon-pencil'></span>&nbsp;
+				ispred naziva partnera da biste ga izmenili ili izbrisali.
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-12">
+			<div id="invoicesGrid"></div>
 		</div>
 	</div>
 </div>
@@ -24,6 +34,7 @@
 
 <% include ../partials/body-common %>
 <% include ../partials/body-kendo %>
+<script src="js/invoices-all.js"></script>
 
 </body>
 </html>
