--- a/views/pages/invoices-unpaid.ejs
+++ b/views/pages/invoices-unpaid.ejs
@@ -20,7 +20,7 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-10 col-md-12">
-			<div id="neplaceniRacuniGrid"></div>
+			<div id="unpaidInvoicesGrid"></div>
 		</div>
 	</div>
 </div>
