Added multilanguage feature, small fixes

--- a/views/pages/invoice-new.ejs
+++ b/views/pages/invoice-new.ejs
@@ -26,7 +26,7 @@
 <% include ../partials/body-common %>
 <% include ../partials/body-kendo %>
 <% include ../partials/body-parsley %>
-<script src="js/zaduzenje-novo.js"></script>
+<script src="js/invoice-new.js"></script>
 
 </body>
 </html>
