--- a/views/pages/reports.ejs
+++ b/views/pages/reports.ejs
@@ -15,7 +15,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-12">
-			<h4>Izveštaji</h4>
+			<h4><%= lang.reports[0].toUpperCase() + lang.reports.substring(1) %></h4>
 		</div>
 	</div>
 </div>
