--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,22 +10,22 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="/">Računi</a>
+				<a class="navbar-brand" href="/"><%= lang.invoices %></a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="navbar-collapse">
 				<ul class="nav navbar-nav">
-					<li class="<%= typeof unpaidInvoicesTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/invoices-unpaid"><strong>Računi za plaćanje</strong></a></li>
-					<li class="<%= typeof allInvoicesTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/invoices-all"><strong>Svi računi</strong></a></li>
-					<li class="<%= typeof reportsTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/reports"><strong>Izveštaji</strong></a></li>
-					<li class="<%= typeof partnersTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/partners"><strong>Partneri</strong></a></li>
+					<li class="<%= typeof unpaidInvoicesTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/invoices-unpaid"><strong><%= lang.invoices_to_pay %></strong></a></li>
+					<li class="<%= typeof allInvoicesTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/invoices-all"><strong><%= lang.all_invoices %></strong></a></li>
+					<li class="<%= typeof reportsTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/reports"><strong><%= lang.reports %></strong></a></li>
+					<li class="<%= typeof partnersTab != 'undefined' ? 'active' : '' %>"><a class="bold" href="/partners"><strong><%= lang.partners %></strong></a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Podešavanja <span class="caret"></span></strong></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong><%= lang.settings %> <span class="caret"></span></strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
+							<li><a href="#" onclick="changeLanguage(this); return false;" data-lang="<%= langParam == 'en' ? 'rs' : 'en' %>"><%- langParam == 'en' ? '<span class="flag-rs pull-left"></span> Srpski' : '<span class="flag-en pull-left"></span> English' %></a></li>
 							<li><a href="#">Another action</a></li>
 							<li><a href="#">Something else here</a></li>
 							<li role="separator" class="divider"></li>
