--- a/views/pages/invoice-pay.ejs
+++ b/views/pages/invoice-pay.ejs
@@ -98,21 +98,33 @@
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-offset-1 col-md-4">
 				<div class="row">
-					<div class="col-xs-12 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6">
+					<div class="col-xs-12 col-sm-12 col-md-12">
 						<label for="amount">Iznos zaduzenja</label>
-						<input id="amount" name="amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" required="" />
+						<div class="row">
+							<div class="col-xs-12 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6">
+								<input id="amount" name="amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" required="" />
+							</div>
+						</div>
+					</div>
+				</div>
+				<div id="discount_box" class="row" hidden="hidden">
+					<div class="col-xs-12 col-sm-12 col-md-12">
+						<label for="amount">Iznos popusta</label>
+						<div class="row">
+							<div class="col-xs-12 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6">
+								<input id="discount_amount" name="discount_amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" required="" />
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-6">
-						<div id="discount_box" hidden="hidden">
-							<label for="amount">Iznos popusta</label>
-							<input id="discount_amount" name="discount_amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" required="" />
-						</div>
-					</div>
-					<div class="col-xs-126 col-sm-6 col-md-6">
+					<div class="col-xs-12 col-sm-12 col-md-12">
 						<label for="amount">Iznos za uplatu</label>
-						<input id="payment_amount" name="payment_amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" disabled="disabled" />
+						<div class="row">
+							<div class="col-xs-12 col-sm-offset-6 col-sm-6 col-md-offset-6 col-md-6">
+								<input id="payment_amount" name="payment_amount" type="text" class="input-sm form-control text-right" data-parsley-trigger="blur" disabled="disabled" />
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -125,8 +137,8 @@
 	</div>
 	<div class="row">
 		<div class="col-xs-12 col-sm-12 col-md-9">
-			<button type="button" class="btn btn-success btn-sm pull-right" id="createInvoice">
-				<span class="glyphicon glyphicon-floppy-save"></span>
+			<button type="button" class="btn btn-default btn-sm pull-right" id="createInvoice">
+				<span class="glyphicon glyphicon-floppy-saved"></span>
 				<%= lang.add %>
 			</button>
 			<button type="button" class="btn btn-link btn-sm pull-left" onclick="location.href='/partners'">
