--- a/views/pages/partner-profile.ejs
+++ b/views/pages/partner-profile.ejs
@@ -104,7 +104,7 @@
 					<span class="glyphicon glyphicon-floppy-save"></span>
 					<%= lang.save %>
 				</button>
-				<button type="button" class="btn btn-danger btn-sm" style="margin-right: 10px;" data-toggle="modal" data-target="#confirmDeleteModal">
+				<button type="button" class="btn btn-danger btn-sm margin-right-10" data-toggle="modal" data-target="#confirmDeleteModal">
 					<span class="glyphicon glyphicon-floppy-remove"></span>
 					<%= lang.delete %>
 				</button>
